<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>
    <!--Nama Perusahaan-->
    <!--Alamat Perusahaan-->
    <!--Nama PIC Terjamin-->
    <!--No HP PIC Terjamin-->
    <!--Email PIC Terjamin-->
    <!--Username-->
    <!--Password-->
    <!--Konfirmasi Password-->
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:orientation="vertical"

        >

            <TextView
                    android:id="@+id/registrasijamkrindo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DAFTAR AKUN JAMKRINDO"
                    android:textSize="25dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintVertical_bias="0.220"
                    android:textColor="@color/colorPrimary"
                    android:textFontWeight="4"

            />
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    app:hintEnabled="true"
                    android:hint="@string/username"
                    android:theme="@style/AppTheme"
            >
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/regUsername"
                        android:inputType="textPersonName"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    app:hintEnabled="true"
                    android:hint="@string/password"
                    android:theme="@style/AppTheme">
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/regPassword"
                        android:inputType="textPassword"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    app:hintEnabled="true"
                    android:theme="@style/AppTheme"
                    android:hint="@string/KonfirmasiPassword">
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/konfirmasiPassword"
                        android:inputType="textPassword"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:theme="@style/AppTheme"
                    app:hintEnabled="true"
                    android:hint="@string/nama">
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/nama"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:theme="@style/AppTheme"
                    app:hintEnabled="true"
                    android:hint="@string/alamat">
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/alamatUser"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:theme="@style/AppTheme"
                    app:hintEnabled="true"
                    android:hint="@string/noHP">
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/noHP"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:theme="@style/AppTheme"
                    app:hintEnabled="true"
                    android:hint="@string/NamaPerusahaan">
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/namaPerusahaan"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:theme="@style/AppTheme"
                    app:hintEnabled="true"
                    android:hint="@string/AlamatPerusahaan">
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/alamatPerusahaan"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:theme="@style/AppTheme"
                    app:hintEnabled="true"
                    android:hint="@string/NamaPICTerjamin"
                    >
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/namaPICTerjamin"
                        android:inputType="textPersonName"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:theme="@style/AppTheme"
                    app:hintEnabled="true"
                    android:hint="@string/NoHPPICTerjamin"
                    >
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/noHPPICTerjamin"
                        android:inputType="phone"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:theme="@style/AppTheme"
                    app:hintEnabled="true"
                    android:hint="@string/EmailPICTerjamin"
                    >
                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/emailPICTerjamin"
                />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginHorizontal="60dp"
                    android:hint="DAFTAR"
                    android:textColorHint="@android:color/background_light"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:id="@+id/daftarButton"
                    style="@style/Theme.MaterialComponents"
                    android:theme="@style/AppTheme"
            />

        </LinearLayout>

    </ScrollView>



</android.support.constraint.ConstraintLayout>